--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,59 @@
 html {
-    box-sizing: border-box;
-    font-size: 100%;
+  box-sizing: border-box;
+  font-size: 100%;
 }
 
-*, *::before, *::after {
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    height: 100%;
-    margin: 0;
-    min-height: 100vh;
-    padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  height: 100%;
+  margin: 0;
+  min-height: 100vh;
+  padding: 0;
 }
+
+section {
+  display: block;
+  margin: 16px auto;
+  width: 100%;
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  max-width: 960px;
+  width: 100%;
+}
+
+.noShow {
+}
+
+.madlib_placeholder {
+  border-bottom: solid 1px #000;
+  display: inline-block;
+  min-height: 19px;
+  min-width: 130px;
+  padding: 1px 4px 2px;
+}
+
+/* .overlay {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  display: none;
+}
+.overlay.visible {
+  display: flex;
+} */
